<resources>
    <string name="app_name">calcul_IMC</string>
    <string name="male_simbol">Male simbol</string>
    <string name="male">Male</string>
    <string name="imc_calculator">IMC calculator</string>
    <string name="female">Female</string>
    <string name="female_simbol">female simbol</string>
    <string name="heigh">Heigh</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="treure_pes">Treure pes</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="imc_results">imc results</string>
    <string name="boto_per_tornar_enrere">Boto per tornar enrere.</string>
    <string name="your_results">Your Results</string>
    <string name="re_calculate">re-calculate</string>
</resources>