<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity"
    android:background="@color/background"
    android:padding="16dp"
    >

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/resultText"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/boto_per_tornar_enrere"
                android:src="@drawable/ic_goback_arrow" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc_results"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader"
        android:text="@string/your_results"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCalcul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/resultText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/card"
            android:gravity="center"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            >

            <TextView
                android:id="@+id/textCalculIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/numCalculIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="22.45"
                android:textAlignment="center"
                android:textSize="100sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="15dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/purple"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_calculate"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>